Fixing header spacing

--- a/scss/_largeNav.scss
+++ b/scss/_largeNav.scss
@@ -14,7 +14,7 @@ nav {
     width: 75rem;
   }
   ul li {
-    // float: left;
+    float: left;
     list-style-type: none;
     position: relative;
     display: inline;
@@ -24,14 +24,14 @@ nav {
     display: inline-block;
     border: none; // undo small screen
 
-    // background: blue;
-    // font-size: 0.9em;
+    background: blue;
+    font-size: 0.9em;
     padding: 0.9em 0.9em;
-    // color: rgba(255, 255, 255, 1);
+    color: rgba(255, 255, 255, 1);
     text-decoration: none;
-    // /*transition*/
-    // -webkit-transition: background 0.3s linear;
-    // transition: background 0.3s linear;
+    /*transition*/
+    -webkit-transition: background 0.3s linear;
+    transition: background 0.3s linear;
   }
   ul li a:hover {
     background: darken($menuColor, 5%);
